# warmachine-ai-trading

./: .env.example  .gitignore  LICENSE  README.md  ai_event_pool.py  config.json  env.example  fix_all_imports.py  main.py  merge_folders.py  move_modules.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
ai_engine/: ai_analyzer.py  ai_processor.py  ai_reporter.py  ai_strategy.py  strategy_evolution.py  trader_assistant.py  trading_system.py
community/: run_community.py  telegram_bot.py
components/: data_collector.py  execution_engine.py  hybrid_aggregator.py  performance_monitor.py  risk_manager.py  signal_generator.py
config/: ai_scheduler_config.json  module_status.json  strategy_evolution_config.json  telegram_config.json
connectors/: __init__.py  alphavantage_connector.py  binance_websocket.py  ibkr_connector.py  ibkr_data.py  market_connector.py  market_data_test.py  polygon_connector.py
core/: README.md  config.py  data_models.py  data_processor.py  event_bus.py  exceptions.py  shared_interfaces.py
datafeeds/: __init__.py  binance.py  market_data_hub.py  polygon.py  tradier.py
monitoring/: realtime_monitor.py
notifiers/: __init__.py  discord_launcher.py  telegram_bot.py  telegram_bot_launcher.py  telegram_chart_bot.py  telegram_notifier.py  unified_notifier.py  voice_manager.py  webhook_notifier.py
setup/: deploy_docker.py  fix_installation.py  install_option.py  reorganize.py
trading/: backtest_strategy.py  decision_engine.py  enhanced_liquidity_sniper.py  hf_executor_test.py  risk_controller.py  strategy_scheduler.py  (+1 more)
(+159 files in other folders)
