[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warmachine"
version = "0.1.0"
description = "WarMachine AI Option Trader"
requires-python = ">=3.8"
dependencies = [
    "python-telegram-bot==20.7",
    "aiohttp==3.9.1",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "websockets>=13.0",
    "pydantic==2.5.2",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "yfinance>=0.2.61"
]

[tool.setuptools]
packages = ["core"] 